Bug 494544 - Uninitialized variable undefined after assignment whose initializer is a closure capturing that var (r=mrbkap).